# denoiseapp

./: README.md  README_ISSUES.md  batch_process.sh  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
flutter_rnn_denoise/: AUDIO_FILE_PROCESSING_GUIDE.md  README.md  STREAM_PROCESSING_GUIDE.md  progress.md  pubspec.yaml
flutter_rnn_denoise/android/: gradle.properties
flutter_rnn_denoise/android/app/: build.gradle
flutter_rnn_denoise/android/app/src/main/jni/: CMakeLists.txt
flutter_rnn_denoise/ios/: Podfile
flutter_rnn_denoise/ios/Runner/: Info.plist
flutter_rnn_denoise/ios/Runner.xcodeproj/: project.pbxproj
flutter_rnn_denoise/lib/: main.dart
flutter_rnn_denoise/lib/src/: audio_manager.dart  audio_manager_stream.dart  audio_manager_stream.deprecated.dart  audio_processor.dart  audio_stream_processor.dart  denoise_page.dart  performance_test_page.dart  rnnoise_bindings.dart  rnnoise_ffi.dart  rnnoise_processor.dart  rnnoise_test.dart  stream_demo_page.dart  stream_demo_page_backup.dart
flutter_rnn_denoise/linux/: CMakeLists.txt
flutter_rnn_denoise/linux/runner/: my_application.cc
flutter_rnn_denoise/src/: denoise.c  rnnoise.c
flutter_rnn_denoise/test/: widget_test.dart
flutter_rnn_denoise/web/: index.html  manifest.json
flutter_rnn_denoise/windows/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
rnn_denoise_tool/: Makefile  README.md  README_ISSUES.md  USAGE_EXAMPLE.md  batch_process.sh  convert_audio.sh  copy_sources.sh  denoise.sh  rnn_denoise
rnn_denoise_tool/src/: main.c  rnnoise.h
(+17 files in other folders)
